Rewrote registries a bit again - Added server registry builders, got rid of a lot of unnecessary wrapping